[gd_scene load_steps=13 format=3 uid="uid://5qcp0n3hpthf"]

[ext_resource type="Texture2D" uid="uid://dveeswqio62ao" path="res://sprite/buttonstyle.png" id="1"]
[ext_resource type="Texture2D" uid="uid://xplooqgyhlw1" path="res://sprite/try.png" id="4"]
[ext_resource type="Texture2D" uid="uid://d4gpvavxu7d5u" path="res://sprite/aufgabe.png" id="5"]
[ext_resource type="PackedScene" uid="uid://bfrq8pxh0tiyg" path="res://scenes/Widerstand.tscn" id="5_3x8sr"]
[ext_resource type="Texture2D" uid="uid://b5g0ih0pqjrji" path="res://sprite/close.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cah4vca5mxd1w" path="res://sprite/info.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cbtyp01b7nf1p" path="res://sprite/exer.png" id="8"]
[ext_resource type="PackedScene" uid="uid://c2ij3ofp8tbjf" path="res://scenes/alt/ButtonBack.tscn" id="10"]
[ext_resource type="Script" path="res://scripts/Base.gd" id="12"]
[ext_resource type="Script" path="res://scripts/alt/Exer.gd" id="13"]
[ext_resource type="Texture2D" uid="uid://dlxce450rhjn8" path="res://sprite/a3/wider.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dxesaj08nynda" path="res://sprite/standard.png" id="16"]

[node name="Aufgabe_3" type="Node2D" groups=["saver"]]
script = ExtResource("12")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("16")
centered = false

[node name="Frame" type="Node2D" parent="."]
position = Vector2(102, 217)
scale = Vector2(0.7, 0.7)

[node name="try" type="Sprite2D" parent="Frame"]
texture = ExtResource("4")

[node name="widertry" type="Label" parent="Frame/try"]
mouse_filter = 1
text = "probieren"

[node name="Try" type="Node2D" parent="Frame"]
visible = false
z_index = 1
position = Vector2(-145.714, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("13")

[node name="Widerstand" parent="Frame/Try" instance=ExtResource("5_3x8sr")]

[node name="Frame2" type="Node2D" parent="."]
position = Vector2(297, 217)
scale = Vector2(0.7, 0.7)

[node name="exer" type="Sprite2D" parent="Frame2"]
texture = ExtResource("8")

[node name="exer" type="Label" parent="Frame2/exer"]
mouse_filter = 1
text = "prüfen"

[node name="Exer" type="Node2D" parent="Frame2"]
z_index = 1
position = Vector2(-414.286, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("13")

[node name="Aufgabe" type="Sprite2D" parent="Frame2/Exer"]
texture = ExtResource("5")
centered = false

[node name="title" type="Label" parent="Frame2/Exer/Aufgabe"]
text = "Wie groß sind die Widerstände?"

[node name="text" type="Label" parent="Frame2/Exer/Aufgabe"]
text = "Rot-Rot-Braun
Gelb-Violett-Orange-Gold
Blau-Grau-Rot-Silber
Welchen Farbcode hat der Widerstand 470 Ohm mit 5% Toleranz?
Welchen Farbcode hat der Widerstand 1 Megaohm (1 MOhm) mit 10% Toleranz?
"

[node name="ButtonClose" type="Node2D" parent="Frame2/Exer"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame2/Exer/ButtonClose"]
texture = ExtResource("6")

[node name="Buttonlabel" type="Label" parent="Frame2/Exer/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="Frame3" type="Node2D" parent="."]
position = Vector2(490, 217)
scale = Vector2(0.7, 0.7)

[node name="info" type="Sprite2D" parent="Frame3"]
texture = ExtResource("7")

[node name="info" type="Label" parent="Frame3/info"]
mouse_filter = 1
text = "lesen"

[node name="Info" type="Node2D" parent="Frame3"]
visible = false
z_index = 1
position = Vector2(-700, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("13")

[node name="Aufgabe" type="Sprite2D" parent="Frame3/Info"]
texture = ExtResource("5")
centered = false

[node name="title" type="Label" parent="Frame3/Info/Aufgabe"]
text = "Widerstände"

[node name="text" type="Label" parent="Frame3/Info/Aufgabe"]
text = "Ein Widerstand ist ein Bauteil, das dafür sorgt, dass an einem anderen Bauteil nicht die komplette Spannung von 5 V abfällt, sondern sie zwischen dem Bauteil und dem Widerstand aufgeteilt wird. Somit wird der Strom, der durch das Bauteil fließt, begrenzt. Auf Widerständen wird durch Farbringe angegeben, wie groß ein Widerstand ist . "

[node name="Wider" type="Sprite2D" parent="Frame3/Info/Aufgabe"]
position = Vector2(290, 257)
texture = ExtResource("14")

[node name="text2" type="Label" parent="Frame3/Info/Aufgabe/Wider"]
text = "Symbol für Widerstände"

[node name="ButtonClose" type="Node2D" parent="Frame3/Info"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame3/Info/ButtonClose"]
texture = ExtResource("6")

[node name="Buttonlabel" type="Label" parent="Frame3/Info/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="ButtonBack" parent="." instance=ExtResource("10")]

[node name="Buttonstyle" type="Sprite2D" parent="."]
position = Vector2(300, 66)
texture = ExtResource("1")

[node name="Label" type="Label" parent="Buttonstyle"]
text = "Widerstände"

[connection signal="gui_input" from="Frame/try/widertry" to="." method="_on_widertry_gui_input"]
[connection signal="mouse_entered" from="Frame/try/widertry" to="." method="_on_try_mouse_entered"]
[connection signal="mouse_exited" from="Frame/try/widertry" to="." method="_on_try_mouse_exited"]
[connection signal="gui_input" from="Frame2/exer/exer" to="." method="_on_exer_gui_input"]
[connection signal="mouse_entered" from="Frame2/exer/exer" to="." method="_on_exer_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/exer/exer" to="." method="_on_exer_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame3/info/info" to="." method="_on_info_gui_input"]
[connection signal="mouse_entered" from="Frame3/info/info" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/info/info" to="." method="_on_info_mouse_exited"]
[connection signal="gui_input" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_exited"]
